<resources>
    <string name="app_name">Spain Cosplay</string>
    <string name="app_email">spaincosplay@coterodev.esy.es</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="acercade">About</string>
    <string name="login">Iniciar sesión</string>
    <string name="register">Registrar</string>
    <string name="registroN">Nuevo Usuario</string>
    <string name="eventosBtn">Information Events</string>
    <string name="ajustesBtn">Settings</string>
    <string name="salirBtn">Exit</string>
    <string name="cerrarSesion">Cerrar Sesion</string>
    <string name="cartelEvento">Imagen Cartel</string>
    <string name="proximos">Upcoming Events</string>
    <string name="cargando">Loading Events... (屮◉◞益◟◉)屮</string>
    <string name="order">Closest date</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="facebook_app_id">1051235838231573</string>
    <string name="update">Update available</string>
    <string name="update2">Visit the store to update</string>
    <string name="error_conexion">Connection issues</string>
    <string name="icono_informacion">Search by name | X to return</string>
    <string name="spinner_objeto0">Upcoming Events</string>
    <string name="spinner_objeto1">Completed Events</string>
    <string name="spinner_objeto2">Sort by Name</string>
</resources>
