<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="30dp"
    android:background="@color/colorPaula">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/tituloprincipal"
        android:textSize="35sp"
        android:layout_marginBottom="20sp"
        android:textColor="@android:color/white" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eventosBtn"
        android:id="@+id/verEventosBtn"
        android:textColor="@android:color/white"
        android:background="@color/colorPaulaComplementario"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acercade"
        android:textColor="@android:color/white"
        android:id="@+id/acercaDeBtn"
        android:layout_marginTop="5dp"
        android:background="@color/colorPaulaComplementario"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cerrarSesion"
        android:textColor="@android:color/white"
        android:id="@+id/cerrarSesionBtn"
        android:layout_marginTop="5dp"
        android:background="@color/colorPaulaComplementario"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salirBtn"
        android:textColor="@android:color/white"
        android:id="@+id/salirBtn"
        android:layout_marginTop="5dp"
        android:background="@color/colorPaulaComplementario"/>
</LinearLayout>